# hackaton_6

./: .gitignore  Dockerfile  Makefile  README.md  docker-compose.yaml  main.py  pyproject.toml
dataset/: main_images.json
src/api/: exception_handler.py  routers.py
src/api/health/: health.py
src/api/import_data/: import_exercises.py  import_fixtures.py
src/api/schemas/: base_errors.py  base_schemas.py  pagination.py
src/common/: exceptions.py  schemas.py
src/common/auth/: authorization.py  constants.py  exceptions.py  jwt_service.py  schemas.py
src/common/clean/: database.py  s3.py
src/common/models/mixins/: __init__.py  time_based.py
src/common/s3/: s3_client.py
src/config/: app.py  database.py  initializers.py  settings.py
src/core/chats/: exceptions.py
src/core/chats/api/: messages.py
src/core/chats/models/: message.py
src/core/chats/schemas/: messages.py
src/core/chats/services/: notifier.py
src/core/chats/use_cases/: get_chat_history.py
src/core/media/: adapters.py  exceptions.py  utils.py  validators.py
src/core/media/api/: media.py
src/core/media/models/: media.py
src/core/media/schemas/: media.py
src/core/media/use_cases/: get_media.py  get_user_media.py  upload_media.py
src/core/trainings/: constants.py  exceptions.py
src/core/trainings/api/: exercises.py  trainings.py
src/core/trainings/fixtures/: exercise.py  training_templates.py  training_types.py
src/core/trainings/models/: __init__.py  exercise.py  training.py  training_exercise.py  training_templates.py  (+1 more)
src/core/users/: constants.py  exceptions.py
(+32 files in other folders)
